--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-termion = "1"
+crossterm = "0.27.0"
+unicode-segmentation = "1.11.0"
+unicode-width = "0.1.12"
